<resources>
    <string name="app_name">Re:act</string>
    <string name="title_activity_login">Sign In</string>
    <string name="title_activity_register">Sign Up</string>
    <string name="title_activity_message">Message</string>
    <string name="title_activity_react">Lecture</string>
    <string name="title_activity_home">Re:act</string>
    <string name="title_activity_room_enter">Entry</string>
    <string name="title_activity_license_agreement">利用規約</string>

    <!-- Strings related to login -->
    <string name="prompt_email">メールアドレス</string>
    <string name="prompt_password">パスワード</string>
    <string name="prompt_password_2">パスワード再入力</string>
    <string name="prompt_family_name">姓名</string>
    <string name="prompt_given_name">名前</string>

    <string name="action_ok">OK</string>
    <string name="action_cancel">キャンセル</string>
    <string name="action_sign_in">ログイン</string>
    <string name="action_room_out">退室</string>
    <string name="action_room_in">入室</string>
    <string name="action_sign_in_short">ログイン</string>
    <string name="action_sign_up_short">登録</string>

    <string name="error_invalid_email">正しいメールアドレスを入力してください</string>
    <string name="error_invalid_password">6桁以上の英数字で入力してください</string>
    <string name="error_incorrect_password">パスワードが正しくない</string>
    <string name="error_different_password">パスワードが一致しない</string>
    <string name="error_room_key">ルームキーを再確認してください</string>
    <string name="error_invalid_room_key">6桁の数字を入力してください</string>
    <string name="error_field_required">情報を入力してください</string>
    <string name="error_reset_password">パスワードのリセットができませんでした</string>
    <string name="error_gps_needed">入室するにはGPS機能をonにする必要がある</string>
    <string name="error_closed_room">入力したルームがすでに終了しました．</string>
    <string name="error_empty_message">入力してください</string>
    <string name="error_unknown">エラーが発生しました．</string>
    <string name="error_timeout">通信障害が発生しました．</string>


    <string name="permission_rationale">Email情報を取得するために連絡帳への承認が必要</string>
    <string name="dialog_password_reset">パスワードリセットメールをお送り致しました．メールを確認してください</string>
    <string name="button_OK_string">OK</string>
    <string name="button_register_string">新規登録</string>
    <string name="button_return_string">戻る</string>
    <string name="hint_key_input">ルームキーを入力してください</string>
    <string name="hint_message_question">「ここが少しわからない」のような質問を入力してください。教員に直接送信されます「150文字以内」。</string>
    <string name="hint_message_feeling">「楽しかった！」のような感想を入力してください。教員に直接送信されます「150文字以内」。</string>
    <string name="hint_message_others">「午後，相談に行きたいです．」のようなメッセージを入力してください。教員に直接送信されます「150文字以内」。</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="room_key">ROOM_KEY</string>
    <string name="pref_name">REACT_SAVE_DATA</string>
    <string name="pref_key_username">UserName</string>
    <string name="pref_key_email">EMail</string>
    <string name="pref_key_password">Password</string>
    <string name="pref_key_api_token">Apitoken</string>
    <string name="forget_password">パスワードを忘れたら</string>
    <string name="domain">http://optimind-react.com</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="action_settings">Settings</string>
    <string name="re_act">Re:act</string>
    <string name="text_confirm">確認</string>
    <string name="text_setting">設定</string>
    <string name="text_home_sub_title">講義 x (集中+反応) = ???</string>
    <string name="text_anonymous">*反応は匿名で送信されます</string>
    <string name="text_time_past_from_room_in">入室経過</string>
    <string name="text_min">min</string>
    <string name="text_number_press">反応回数</string>
    <string name="text_number">回</string>
    <string name="text_resend">再送信</string>
    <string name="text_person_10_min">人/10min</string>
    <string name="text_confused">分からん</string>
    <string name="text_interesting">いいね</string>
    <string name="text_boring">う～ん</string>
    <string name="text_confirm_room">ルーム情報確認</string>
    <string name="text_message">メーセッジ</string>
    <string name="tab_question">質問</string>
    <string name="tab_feeling">感想</string>
    <string name="tab_others">その他</string>

    <string name="title_quit_room">退室確認</string>
    <string name="title_find_pwd">パスワード再発行</string>
    <string name="text_input_email">登録したEmailを入力してください</string>
    <string name="title_finish_message_task">送信完了</string>
    <string name="text_quit_room">退室してよろしいですか</string>
    <string name="info_quit_room">退室処理が行います</string>
    <string name="text_send">送信</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="text_anonymous_short">匿名</string>
    <string name="lecture_button">lecture button</string>
    <string name="text_lecture">Lecture</string>
    <string name="text_agree">同意する</string>
    <string name="license_agreement">"この利用規約（以下，「本規約」といいます。）は，合同会社 オプティマインド（以下，「当社」といいます。）がこのウェブサイト上ならびにiOS, Androidで提供するアプリケーションとWebサービス（以下，「本サービス」といいます。）の利用条件を定めるものです。登録ユーザーの皆さま（以下，「ユーザー」といいます。）には，本規約に従って，本サービスをご利用いただきます。\n第1条（適用）\n本規約は，ユーザーと当社との間の本サービスの利用に関わる一切の関係に適用されるものとします。\n第2条（利用登録）\n 1. 登録希望者が当社の定める方法によって利用登録を申請し，当社がこれを承認することによって，利用登録が完了するものとします。\n 2. 当社は，利用登録の申請者に以下の事由があると判断した場合，利用登録の申請を承認しないことがあり，その理由については一切の開示義務を負わないものとします。\n * 利用登録の申請に際して虚偽の事項を届け出た場合\n * 本規約に違反したことがある者からの申請である場合\n * その他，当社が利用登録を相当でないと判断した場合\n第3条（ユーザーIDおよびパスワードの管理）\n 1. ユーザーは，自己の責任において，本サービスのユーザーIDおよびパスワードを管理するものとします。\n 2. ユーザーは，いかなる場合にも，ユーザーIDおよびパスワードを第三者に譲渡または貸与することはできません。当社は，ユーザーIDとパスワードの組み合わせが登録情報と一致してログインされた場合には，そのユーザーIDを登録しているユーザー自身による利用とみなします。\n第4条（禁止事項）\nユーザーは，本サービスの利用にあたり，以下の行為をしてはなりません。\n 1. 法令または公序良俗に違反する行為\n 2. 犯罪行為に関連する行為\n 3. 当社のサーバーまたはネットワークの機能を破壊したり，妨害したりする行為\n 4. 当社のサービスの運営を妨害するおそれのある行為\n 5.他のユーザーに関する個人情報等を収集または蓄積する行為\n 6. 他のユーザーに成りすます行為\n 7. 当社のサービスに関連して，反社会的勢力に対して直接または間接に利益を供与する行為\n 8. その他，当社が不適切と判断する行為\n第5条（本サービスの提供の停止等) \n当社は，以下のいずれかの事由があると判断した場合，ユーザーに事前に通知することなく本サービスの全部または一部の提供を停止または中断することができるものとします。\n 1. 本サービスにかかるコンピュータシステムの保守点検または更新を行う場合 \n 2. 地震，落雷，火災，停電または天災などの不可抗力により，本サービスの提供が困難となった場合 \n 3. コンピュータまたは通信回線等が事故により停止した場合\n 4. その他，当社が本サービスの提供が困難と判断した場合\n当社は，本サービスの提供の停止または中断により，ユーザーまたは第三者が被ったいかなる不利益または損害について，理由を問わず一切の責任を負わないものとします。\n第6条（利用制限および登録抹消）\n 当社は，以下の場合には，事前の通知なく，ユーザーに対して，本サービスの全部もしくは一部の利用を制限し，またはユーザーとしての登録を抹消することができるものとします。 \n 1. 本規約のいずれかの条項に違反した場合 \n 2. 登録事項に虚偽の事実があることが判明した場合 \n 3. その他，当社が本サービスの利用を適当でないと判断した場合\n当社は，本条に基づき当社が行った行為によりユーザーに生じた損害について，一切の責任を負いません。\n第7条（免責事項）\n 1. 当社の債務不履行責任は，当社の故意または重過失によらない場合には免責されるものとします。\n 2. 当社は，何らかの理由によって責任を負う場合にも，通常生じうる損害の範囲内かつ有料サービスにおいては代金額（継続的サービスの場合には1か月分相当額）の範囲内においてのみ賠償の責任を負うものとします。 \n 3. 当社は，本サービスに関して，ユーザーと他のユーザーまたは第三者との間において生じた取引，連絡または紛争等について一切責任を負いません。\n 第8条（サービス内容の変更等) \n 当社は，ユーザーに通知することなく，本サービスの内容を変更しまたは本サービスの提供を中止することができるものとし，これによってユーザーに生じた損害について一切の責任を負いません。\n 第9条（利用規約の変更）\n当社は，必要と判断した場合には，ユーザーに通知することなくいつでも本規約を変更することができるものとします。\n 第10条（通知または連絡）\nユーザーと当社との間の通知または連絡は，当社の定める方法によって行うものとします。\n 第11条（権利義務の譲渡の禁止) \n ユーザーは，当社の書面による事前の承諾なく，利用契約上の地位または本規約に基づく権利もしくは義務を第三者に譲渡し，または担保に供することはできません。\n 第12条（準拠法・裁判管轄）\n 1. 本規約の解釈にあたっては，日本法を準拠法とします。 \n 2. 本サービスに関して紛争が生じた場合には，当社の本店所在地を管轄する裁判所を専属的合意管轄とします。\n プライバシーポリシーについてはこちら　\n http://optimind-react.com/privacyPolicy\n\nMrs.　\n 同意をされた場合、利用規約 並びに プライバシーポリシー の両者に同意したこととみなします。 \n 以上"
    </string>

</resources>
