<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root_layout"
    tools:context=".HomeActivity"
    android:background="@color/colorBack">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/re_act"
        android:id="@+id/title"
        android:layout_weight="2"
        android:gravity="center|bottom"
        android:textColor="@color/clickable_text"
        android:textIsSelectable="false"
        android:textSize="50sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/text_home_sub_title"
        android:id="@+id/title_sub"
        android:layout_weight="1"
        android:gravity="center|top"
        android:textColor="@color/clickable_text"
        android:textIsSelectable="false"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:layout_weight="6">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/lectureButton"
            android:background="@drawable/lecture_bt"
            android:contentDescription="@string/lecture_button"
            android:layout_gravity="center"
            android:layout_margin="50dp"
            android:text="@string/text_lecture"
            android:textColor="@android:color/white"
            android:textSize="50dp" />

    </LinearLayout>

</LinearLayout>
